--- a/Simul.properties
+++ b/Simul.properties
@@ -1,11 +1,114 @@
-#Tue May 14 09:32:26 WEST 2024
-d7s=284,1
-dec=160,1
-regLow=216,108
-kit=105,227
-SimDig=-8,-8
-kbd_ICON=true
-regHigh=381,111
-lcd=442,289
+#Thu Jun 20 18:40:14 WEST 2024
+usbport_ICON=true
+dc_ICON=false
+Or=186,118
+KeyBuffer_SIZE=183,190
+idxGet_SIZE=282,166
+Controller_SIZE=215,140
+D5_TIES=false
+count_SIZE=319,241
+ob_ICON=true
+Comp=272,178
+Ctrl_SIZE=338,628
+kit_SIZE=133,240
+m_TIES=false
+D4_TIES=false
+lcd_TIES=false
+D3_TIES=false
+Mux_SIZE=245,249
+MAC=436,108
+rb=96,460
+D4_SIZE=114,200
+rb_ICON=true
+Output\ Reg=237,267
+v1_TIES=false
+Door_TIES=true
+srd_ICON=true
+lcd_SIZE=480,143
+kb_SIZE=172,190
+UsbPort=696,245
+D3_SIZE=114,200
+dl_ICON=true
+srl_SIZE=383,389
+sc=883,79
+RAMdualport_SIZE=259,394
+ca_ICON=false
+sd=1000,82
+D1_TIES=false
+kbd_SIZE=174,246
+kb=11,472
+v1_SIZE=114,200
+sd_SIZE=95,218
+ca=214,152
+Door_SIZE=375,247
+s_ICON=true
+Shift\ Register=450,94
+Controller=52,176
+D0=580,252
+D1=466,252
+m=25,151
+D2=352,252
+D3=237,252
+D4=123,252
+D5=7,252
+idxPut_SIZE=285,163
+RingBuffer_SIZE=346,769
+v0=545,110
+v1=431,110
+door_ICON=false
+dc=1330,511
+dc_SIZE=235,388
+door=231,150
+D0_SIZE=114,200
+dl=994,97
+RingBuffer=60,15
+rb_SIZE=404,347
+Counter=260,36
+MemoryAddressControl=460,32
+Output\ Reg_SIZE=297,214
+kit_ICON=true
+ob_SIZE=309,284
+MemoryAddressControl_SIZE=270,331
+lcd_ICON=false
+srs_ICON=true
+D0_TIES=false
+count=172,367
+srd_SIZE=398,253
+Ctrl=716,19
+RAMdualport=748,47
+srl_TIES=true
+Mux=726,57
+sc_ICON=true
+ca_SIZE=188,79
+kbd_TIES=false
+kb_ICON=false
+D1_SIZE=114,200
+Score\ Display_SIZE=347,321
+idxGet=183,197
 SimDig_SIZE=1936,1048
-UsbPort=42,83
+Door_ICON=false
+UsbPort_ICON=false
+dl_SIZE=243,365
+D2_TIES=false
+sd_ICON=false
+kbd_ICON=false
+lcd=6,3
+door_TIES=false
+v0_SIZE=119,200
+ob=492,460
+SimDig=-8,-8
+srl_ICON=false
+v0_TIES=false
+srd=931,215
+D2_SIZE=114,200
+door_SIZE=253,301
+kbd=511,4
+srl=297,479
+Door=1,0
+m_SIZE=179,80
+MAC_SIZE=282,191
+D5_SIZE=114,200
+idxPut=179,32
+Score\ Display=878,43
+RAM_SIZE=515,565
+RAM=661,0
